2009-02-08  Aidan Kehoe  <kehoea@parhasard.net>

	* cl-macs.el (delete-duplicates): 
	Add a new compiler macro, inlining this function if it's called
	with a literal #'eq or #'equal test arguments and no other
	keywords.
	* font-lock.el (font-lock-unique): 
	Remove this function. 
	* font-lock.el (font-lock-prepend-text-property): 
	(font-lock-append-text-property): 
	Use #'delete-duplicates instead of #'font-lock-unique.
	* font.el (font-unique):
	Remove this function.
	* font.el (font-combine-fonts-internal): 
	(x-font-families-for-device): 
	(xft-font-families-for-device): 
	(ns-font-families-for-device): 
	Use #'delete-duplicates instead of #'font-unique.
	* fontconfig.el (fc-delete-duplicates): 
	* fontconfig.el (fc-filter): 
	Remove these functions. 	
	* fontconfig.el (fc-find-available-font-families): 
	Replace #'fc-delete-duplicates with #'delete-duplicates,
	#'fc-filter with #'delete-if-not.
	* format.el (format-make-relatively-unique): 
	Document that this is equivalent to #'nset-exclusive-or with a
	test of #'equal.

2009-02-07  Aidan Kehoe  <kehoea@parhasard.net>

	* descr-text.el (describe-text-sexp):
	pp is in packages, use cl-prettyprint instead. 
	* mule/mule-coding.el (make-8-bit-generate-helper): 
	Don't uselessly bind args-out-of-range, thank you the byte
	compiler. 	
	* mule/mule-coding.el (8-bit-fixed-query-coding-region): 
	Don't uselessly bind previous-fail, thank you the byte compiler.
	* tty-init.el (make-device-early-tty-entry-point): 
	Set make-device-early-tty-entry-point-called-p, not 
	pre-tty-win-initted, thank you the byte compiler. 
	* unicode.el (unicode-query-coding-region): 
	Don't uselessly bind invalid-sequence-p, thank you the
	byte-compiler. 

2009-02-07  Aidan Kehoe  <kehoea@parhasard.net>

	* coding.el (query-coding-clear-highlights): 
	Rename the BUFFER argument to BUFFER-OR-STRING, describe it as
	possibly being a string in its documentation. 
	(default-query-coding-region): 